--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -463,4 +463,8 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer, org.ke
         return traces
     }
 
+    #if($ctx.genSelector)
+        fun internal_selectByQuery(query : String, result : MutableList<Any>)
+    #end
+
 }
