--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
@@ -80,6 +80,7 @@ override fun time(tp: org.kevoree.modeling.api.time.TimePoint): org.kevoree.mode
 
 override fun setRoot(elem : org.kevoree.modeling.api.KMFContainer){
     (elem as ${ctx.getKevoreeContainerImplFQN()}).is_root = true
+    (elem as ${ctx.getKevoreeContainerImplFQN()}).path_cache = null
 }
 
 
