--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -9,9 +9,12 @@ package ${packElem}
 
 object cleanCacheVisitor : org.kevoree.modeling.api.util.ModelVisitor() {
     public override fun visit(elem: org.kevoree.modeling.api.KMFContainer, refNameInParent: String, parent: org.kevoree.modeling.api.KMFContainer) {
+    #if($ctx.persistence)
+        (elem as org.kevoree.modeling.api.persistence.KMFContainerProxy).originFactory!!.elementsToBeRemoved.add((elem as KMFContainerImpl).path()!!)
+    #end
         (elem as KMFContainerImpl).path_cache = null
     #if($ctx.persistence)
-        (this as org.kevoree.modeling.api.persistence.KMFContainerProxy).originFactory!!.notify(elem)
+        (elem as org.kevoree.modeling.api.persistence.KMFContainerProxy).originFactory!!.notify(elem)
     #end
     }
 }
@@ -110,6 +113,7 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer, org.ke
     fun setEContainer( container : org.kevoree.modeling.api.${formatedFactoryName}?, unsetCmd : RemoveFromContainerCommand?, refNameInParent : String? ) {
         if(internal_readOnlyElem){return}
         if(eContainer() == container){return}
+        (this as KMFContainerImpl).visit(cleanCacheVisitor,true,true,false)
         val tempUnsetCmd = internal_unsetCmd
         internal_unsetCmd = null
         if(tempUnsetCmd != null){
@@ -123,7 +127,6 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer, org.ke
 #if($ctx.persistence)
         (this as org.kevoree.modeling.api.persistence.KMFContainerProxy).originFactory!!.notify(this)
 #end
-        (this as KMFContainerImpl).visit(cleanCacheVisitor,true,true,false)
 }
 
 #if($ctx.genSelector)
