--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/RemoveFromContainerCommand.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/RemoveFromContainerCommand.vm
@@ -8,7 +8,7 @@ class RemoveFromContainerCommand(val target : org.kevoree.modeling.api.KMFContai
 #if($ctx.persistence)
         var casted = target as KMFContainerPersistenceImpl
         if(!casted.inResolution){
-            (element as KMFContainerPersistenceImpl).originFactory!!.elementsToBeRemoved.add((element as KMFContainerImpl).path()!!)
+            (element as KMFContainerPersistenceImpl).originFactory!!.elementsToBeRemoved.add((element as KMFContainerImpl).path())
             target.reflexiveMutator(mutatorType,refName, element,true,true)
         }
     #else
