--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/trace/TraceCompareMethod.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/trace/TraceCompareMethod.vm
@@ -31,12 +31,12 @@ override fun generateDiffTraces(similarObj : ${ctx.kevoreeContainer}?, kmf_inter
         }
         if(attVal != attVal2){
             if(!kmf_internal_inter) {
-                traces.add(org.kevoree.modeling.api.trace.ModelSetTrace(path()!!,${FQNHelper.fqn($ctx, $ctx.basePackageForUtilitiesGeneration)}.util.Constants.Att_$att.getName(),null,attVal2String,null))
+                traces.add(org.kevoree.modeling.api.trace.ModelSetTrace(path(),${FQNHelper.fqn($ctx, $ctx.basePackageForUtilitiesGeneration)}.util.Constants.Att_$att.getName(),null,attVal2String,null))
             }
         } else {
             //att similar
             if(kmf_internal_inter) {
-                traces.add(org.kevoree.modeling.api.trace.ModelSetTrace(path()!!,${FQNHelper.fqn($ctx, $ctx.basePackageForUtilitiesGeneration)}.util.Constants.Att_$att.getName(),null,attVal2String,null))
+                traces.add(org.kevoree.modeling.api.trace.ModelSetTrace(path(),${FQNHelper.fqn($ctx, $ctx.basePackageForUtilitiesGeneration)}.util.Constants.Att_$att.getName(),null,attVal2String,null))
             }
         }
      #end
@@ -70,7 +70,7 @@ override fun generateDiffTraces(similarObj : ${ctx.kevoreeContainer}?, kmf_inter
                   }
                   if(hashResult!!.size != 0){
                     for(hashLoopRes in hashResult!!.keySet()){
-                        traces.add(org.kevoree.modeling.api.trace.ModelAddTrace(path()!!,${FQNHelper.fqn($ctx, $ctx.basePackageForUtilitiesGeneration)}.util.Constants.Ref_$kmf_internal_ref.getName(),hashLoopRes,hashResult!!.get(hashLoopRes)!!.metaClassName()))
+                        traces.add(org.kevoree.modeling.api.trace.ModelAddTrace(path(),${FQNHelper.fqn($ctx, $ctx.basePackageForUtilitiesGeneration)}.util.Constants.Ref_$kmf_internal_ref.getName(),hashLoopRes,hashResult!!.get(hashLoopRes)!!.metaClassName()))
                     }
                   }
               #else
@@ -85,12 +85,12 @@ override fun generateDiffTraces(similarObj : ${ctx.kevoreeContainer}?, kmf_inter
                   }
                   if(attVal != attVal2){
                          if(!kmf_internal_inter){
-                            traces.add(org.kevoree.modeling.api.trace.ModelSetTrace(path()!!,${FQNHelper.fqn($ctx, $ctx.basePackageForUtilitiesGeneration)}.util.Constants.Ref_$kmf_internal_ref.getName(),attVal2String,null,null))
+                            traces.add(org.kevoree.modeling.api.trace.ModelSetTrace(path(),${FQNHelper.fqn($ctx, $ctx.basePackageForUtilitiesGeneration)}.util.Constants.Ref_$kmf_internal_ref.getName(),attVal2String,null,null))
                          }
                   } else {
                         //att similar
                         if(kmf_internal_inter){
-                            traces.add(org.kevoree.modeling.api.trace.ModelSetTrace(path()!!,${FQNHelper.fqn($ctx, $ctx.basePackageForUtilitiesGeneration)}.util.Constants.Ref_$kmf_internal_ref.getName(),attVal2String,null,null))
+                            traces.add(org.kevoree.modeling.api.trace.ModelSetTrace(path(),${FQNHelper.fqn($ctx, $ctx.basePackageForUtilitiesGeneration)}.util.Constants.Ref_$kmf_internal_ref.getName(),attVal2String,null,null))
                         }
                   }
               #end
