fix bug in JS fix bug in resolution better protection for delete

--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerPersistenceTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerPersistenceTrait.vm
@@ -14,6 +14,9 @@ trait ${formatedFactoryName}PersistenceImpl : ${formatedFactoryName}Impl,org.kev
 
 
     fun checkLazyLoad(){
+        if(isDeleted()){
+            throw Exception("This object is deleted")
+        }
         if(!isResolved){
             isResolved = true
             inResolution = true
