--- a/org.kevoree.modeling.dsl/src/main/resources/ClassPrinter.vm
+++ b/org.kevoree.modeling.dsl/src/main/resources/ClassPrinter.vm
@@ -1,13 +1,15 @@
 #* @vtlvariable name="clazz" type="org.eclipse.emf.ecore.EClass"
  @vtlvariable name="superTypes" type="java.lang.String"
  @vtlvariable name="attributes" type="java.util.List<org.eclipse.emf.ecore.EAttribute>"
- @vtlvariable name="references" type="java.util.List<org.eclipse.emf.ecore.EReference>" *#
-class $clazz.getName() $superTypes {
+ @vtlvariable name="references" type="java.util.List<org.eclipse.emf.ecore.EReference>"
+ @vtlvariable name="PrettyPrinter" type="org.kevoree.modeling.dsl.PrettyPrinter"
+  *#
+class $PrettyPrinter.fqn($clazz) $superTypes {
 #foreach($att in $attributes)
-   #if($att.isID())@id #end$att.getName() : $att.getEAttributeType().getName()
+    #if($att.isID())@id #end$att.getName() : $att.getEAttributeType().getName()
 #end
 
 #foreach($ref in $references)
-   #if($ref.isContainment())@contained #end$ref.getName() : $ref.getEReferenceType().getName()
+    #if($ref.isContainment())@contained #end$ref.getName() : $PrettyPrinter.fqn($ref.getEReferenceType())
 #end
 }
