--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/VisitMethods.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/VisitMethods.vm
@@ -15,7 +15,7 @@ override fun visit(visitor : org.kevoree.modeling.api.util.ModelVisitor, recursi
             if(containedReference){
                     #set($firstGeneratedCont = false)
                 #end
-                visitor.beginVisitRef(${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()}, ${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.${FQNHelper.fqn($ctx, $ref.getEReferenceType()).replace(".", "_")})
+                if(visitor.beginVisitRef(${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()}, ${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.${FQNHelper.fqn($ctx, $ref.getEReferenceType()).replace(".", "_")})){
                 #if($ref.isMany())
                     for(KMFLoopEntryKey in _${ref.getName()}.keySet()){
                         internal_visit(visitor,_${ref.getName()}.get(KMFLoopEntryKey),recursive,containedReference,nonContainedReference,${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()})
@@ -23,6 +23,7 @@ override fun visit(visitor : org.kevoree.modeling.api.util.ModelVisitor, recursi
                 #else
                     internal_visit(visitor,${FQNHelper.protectReservedWords(${ref.getName()})},recursive,containedReference,nonContainedReference,${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()})
                 #end
+                }
                 visitor.endVisitRef(${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()})
             #end
             #if(!$firstGeneratedCont)
@@ -35,7 +36,7 @@ override fun visit(visitor : org.kevoree.modeling.api.util.ModelVisitor, recursi
            if(nonContainedReference){
                             #set($firstGeneratedRef = false)
                         #end
-                        visitor.beginVisitRef(${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()}, ${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.${FQNHelper.fqn($ctx, $ref.getEReferenceType()).replace(".", "_")})
+                        if(visitor.beginVisitRef(${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()}, ${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.${FQNHelper.fqn($ctx, $ref.getEReferenceType()).replace(".", "_")})){
                         #if($ref.isMany())
                             for(KMFLoopEntryKey in _${ref.getName()}.keySet()){
                                 internal_visit(visitor,_${ref.getName()}.get(KMFLoopEntryKey),recursive,containedReference,nonContainedReference,${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()})
@@ -43,6 +44,7 @@ override fun visit(visitor : org.kevoree.modeling.api.util.ModelVisitor, recursi
                         #else
                             internal_visit(visitor,${FQNHelper.protectReservedWords(${ref.getName()})},recursive,containedReference,nonContainedReference,${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()})
                         #end
+                        }
                         visitor.endVisitRef(${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()})
                     #end
                 #end
