--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
@@ -78,11 +78,24 @@ override fun time(tp: org.kevoree.modeling.api.time.TimePoint): org.kevoree.mode
 
 #end
 
+#if(!$ctx.persistence)
+    override fun select(query: String): List<org.kevoree.modeling.api.KMFContainer> {
+        //TODO
+        return java.util.ArrayList<org.kevoree.modeling.api.KMFContainer>();
+    }
+    override fun root(elem : org.kevoree.modeling.api.KMFContainer){
+        (elem as ${ctx.getKevoreeContainerImplFQN()}).is_root = true
+        (elem as ${ctx.getKevoreeContainerImplFQN()}).path_cache = "/"
+    }
+ #else
+     override fun root(elem : org.kevoree.modeling.api.KMFContainer){
+        (elem as ${ctx.getKevoreeContainerImplFQN()}).is_root = true
+        (elem as ${ctx.getKevoreeContainerImplFQN()}).path_cache = "/"
+        modified_elements.put("/", elem)
+     }
+#end
 
-override fun setRoot(elem : org.kevoree.modeling.api.KMFContainer){
-    (elem as ${ctx.getKevoreeContainerImplFQN()}).is_root = true
-    (elem as ${ctx.getKevoreeContainerImplFQN()}).path_cache = "/"
-}
+
 
 override fun createJSONSerializer(): org.kevoree.modeling.api.json.JSONModelSerializer {
     return ${helper.fqn($ctx,$ctx.getBasePackageForUtilitiesGeneration())}.serializer.JSONModelSerializer()
