--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerPersistenceTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerPersistenceTrait.vm
@@ -35,9 +35,9 @@ trait ${formatedFactoryName}PersistenceImpl : ${formatedFactoryName}Impl,org.kev
             throw Exception("Cannot setOrigin for element with path \""+path+"\" : No reference to a Root")
         }
         if(path == "/") { // ROOT
-            originFactory!!.root(this)
+            this.is_root = true
+            this.path_cache = "/"
         } else {
-
             //set key_cache
             key_cache = path.substring(path.lastIndexOf("[")+1,path.lastIndexOf("]"))
 
