--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
@@ -68,12 +68,20 @@ override var relativeTime: org.kevoree.modeling.api.time.TimePoint = org.kevoree
 override var queryMap: MutableMap<String, org.kevoree.modeling.api.time.TimePoint> = java.util.HashMap<String, org.kevoree.modeling.api.time.TimePoint>()
 override var timeCache: java.util.HashMap<String, org.kevoree.modeling.api.time.blob.TimeMeta> = java.util.HashMap<String, org.kevoree.modeling.api.time.blob.TimeMeta>()
 override var entitiesCache: org.kevoree.modeling.api.time.blob.EntitiesMeta? = null
+override protected var sharedCache : org.kevoree.modeling.api.time.blob.SharedCache<${formatedFactoryName}> = org.kevoree.modeling.api.time.blob.SharedCache<${formatedFactoryName}>()
 
 override fun time(tp: org.kevoree.modeling.api.time.TimePoint): org.kevoree.modeling.api.time.TimeView<${formatedFactoryName}> {
-    val newFactory = Default${formatedFactoryName}()
-    newFactory.datastore = this.datastore;
-    newFactory.relativeTime = tp;
-    return newFactory;
+    val resolved : org.kevoree.modeling.api.time.TimeView<${formatedFactoryName}>? = sharedCache.get(tp);
+    if(resolved != null){
+        return resolved;
+    } else {
+        val newFactory = Default${formatedFactoryName}()
+        newFactory.sharedCache = sharedCache
+        newFactory.datastore = this.datastore;
+        newFactory.relativeTime = tp;
+        sharedCache.add(tp,newFactory)
+        return newFactory;
+    }
 }
 
 #end
