--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
@@ -92,38 +92,41 @@ override fun time(tp: org.kevoree.modeling.api.time.TimePoint): org.kevoree.mode
         return java.util.ArrayList<org.kevoree.modeling.api.KMFContainer>();
     }
     override fun root(elem : org.kevoree.modeling.api.KMFContainer){
-        (elem as ${ctx.getKevoreeContainerImplFQN()}).is_root = true
-        (elem as ${ctx.getKevoreeContainerImplFQN()}).path_cache = "/"
+    (elem as ${ctx.getKevoreeContainerImplFQN()}).is_root = true
+    (elem as ${ctx.getKevoreeContainerImplFQN()}).path_cache = "/"
     }
- #else
-     override fun root(elem : org.kevoree.modeling.api.KMFContainer){
-        (elem as ${ctx.getKevoreeContainerImplFQN()}).is_root = true
-        (elem as ${ctx.getKevoreeContainerImplFQN()}).path_cache = "/"
-        modified_elements.put("/", elem)
-     }
-#end
+    #else
+    override fun root(elem : org.kevoree.modeling.api.KMFContainer){
+    if(elem !is org.kevoree.modeling.api.persistence.KMFContainerProxy || (elem as org.kevoree.modeling.api.persistence.KMFContainerProxy).originFactory != this){
+        throw Exception("KMFObject created in another factory of TimeView cannot be set as root of this TimeView")
+    }
+    (elem as ${ctx.getKevoreeContainerImplFQN()}).is_root = true
+    (elem as ${ctx.getKevoreeContainerImplFQN()}).path_cache = "/"
+    modified_elements.put("/", elem)
+    }
+    #end
 
 
 
-override fun createJSONSerializer(): org.kevoree.modeling.api.json.JSONModelSerializer {
+    override fun createJSONSerializer(): org.kevoree.modeling.api.json.JSONModelSerializer {
     return ${helper.fqn($ctx,$ctx.getBasePackageForUtilitiesGeneration())}.serializer.JSONModelSerializer()
-}
-override fun createJSONLoader(): org.kevoree.modeling.api.json.JSONModelLoader {
+    }
+    override fun createJSONLoader(): org.kevoree.modeling.api.json.JSONModelLoader {
     return ${helper.fqn($ctx,$ctx.getBasePackageForUtilitiesGeneration())}.loader.JSONModelLoader()
-}
-override fun createXMISerializer(): org.kevoree.modeling.api.xmi.XMIModelSerializer {
+    }
+    override fun createXMISerializer(): org.kevoree.modeling.api.xmi.XMIModelSerializer {
     return ${helper.fqn($ctx,$ctx.getBasePackageForUtilitiesGeneration())}.serializer.XMIModelSerializer()
-}
-override fun createXMILoader(): org.kevoree.modeling.api.xmi.XMIModelLoader {
+    }
+    override fun createXMILoader(): org.kevoree.modeling.api.xmi.XMIModelLoader {
     return ${helper.fqn($ctx,$ctx.getBasePackageForUtilitiesGeneration())}.loader.XMIModelLoader()
-}
-override fun createModelCompare(): org.kevoree.modeling.api.compare.ModelCompare {
+    }
+    override fun createModelCompare(): org.kevoree.modeling.api.compare.ModelCompare {
     return ${helper.fqn($ctx,$ctx.getBasePackageForUtilitiesGeneration())}.compare.DefaultModelCompare()
-}
+    }
 
-override fun createModelCloner() : org.kevoree.modeling.api.ModelCloner {
+    override fun createModelCloner() : org.kevoree.modeling.api.ModelCloner {
     return ${helper.fqn($ctx,$ctx.getBasePackageForUtilitiesGeneration())}.cloner.DefaultModelCloner()
-}
+    }
 
 
 
