--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -11,12 +11,14 @@ object cleanCacheVisitor : org.kevoree.modeling.api.util.ModelVisitor() {
     public override fun visit(elem: org.kevoree.modeling.api.KMFContainer, refNameInParent: String, parent: org.kevoree.modeling.api.KMFContainer) {
     #if($ctx.persistence)
         (elem as org.kevoree.modeling.api.persistence.KMFContainerProxy).originFactory!!.elementsToBeRemoved.add((elem as KMFContainerImpl).path())
-    #end
-        (elem as KMFContainerImpl).path_cache = null
-    #if($ctx.persistence)
         (elem as org.kevoree.modeling.api.persistence.KMFContainerProxy).originFactory!!.notify(elem)
     #end
     }
+
+    override fun endVisitElem(elem: KMFContainer) {
+        (elem as KMFContainerImpl).path_cache = null
+    }
+
 }
 
 trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer, org.kevoree.modeling.api.util.InboundRefAware {
