--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -15,7 +15,7 @@ object cleanCacheVisitor : org.kevoree.modeling.api.util.ModelVisitor() {
     #end
     }
 
-    override fun endVisitElem(elem: KMFContainer) {
+    public override fun endVisitElem(elem: org.kevoree.modeling.api.KMFContainer) {
         (elem as KMFContainerImpl).path_cache = null
     }
 
