--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
@@ -105,23 +105,23 @@ override fun time(tp: org.kevoree.modeling.api.time.TimePoint): org.kevoree.mode
 
 
     override fun createJSONSerializer(): org.kevoree.modeling.api.json.JSONModelSerializer {
-    return ${helper.fqn($ctx,$ctx.getBasePackageForUtilitiesGeneration())}.serializer.JSONModelSerializer()
+        return org.kevoree.modeling.api.json.JSONModelSerializer()
     }
     override fun createJSONLoader(): org.kevoree.modeling.api.json.JSONModelLoader {
-    return ${helper.fqn($ctx,$ctx.getBasePackageForUtilitiesGeneration())}.loader.JSONModelLoader()
+        return org.kevoree.modeling.api.json.JSONModelLoader(this)
     }
     override fun createXMISerializer(): org.kevoree.modeling.api.xmi.XMIModelSerializer {
-    return ${helper.fqn($ctx,$ctx.getBasePackageForUtilitiesGeneration())}.serializer.XMIModelSerializer()
+        return org.kevoree.modeling.api.xmi.XMIModelSerializer()
     }
     override fun createXMILoader(): org.kevoree.modeling.api.xmi.XMIModelLoader {
-    return ${helper.fqn($ctx,$ctx.getBasePackageForUtilitiesGeneration())}.loader.XMIModelLoader()
+        return org.kevoree.modeling.api.xmi.XMIModelLoader(this)
     }
     override fun createModelCompare(): org.kevoree.modeling.api.compare.ModelCompare {
         return org.kevoree.modeling.api.compare.ModelCompare(this)
     }
 
     override fun createModelCloner() : org.kevoree.modeling.api.ModelCloner {
-    return ${helper.fqn($ctx,$ctx.getBasePackageForUtilitiesGeneration())}.cloner.DefaultModelCloner()
+        return org.kevoree.modeling.api.ModelCloner(this)
     }
 
 
