--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
@@ -6,13 +6,11 @@
 #* @vtlvariable name="ctx" type="org.kevoree.modeling.kotlin.generator.GenerationContext" *#
 #* @vtlvariable name="helper" type="org.kevoree.modeling.kotlin.generator.ProcessorHelper" *#
 
-package ${packageName}.impl;
+package ${packageName}.factory;
 
 #foreach( $class in $classes )
-import ${packageName}.${class.getName()};
+import $helper.fqn($ctx, $class);
 #end
-
-import ${packageName}.${formatedFactoryName};
 
 #if(!$js)open#end class Default${formatedFactoryName} : ${formatedFactoryName} {
 
@@ -25,8 +23,8 @@ override val elementsToBeRemoved : MutableSet<String> = java.util.HashSet<String
 #end
 
 #foreach( $class in $classes )
-override fun create${class.getName()}() : ${class.getName()} {
-val tempElem = ${class.getName()}Impl()
+override fun create${class.getName()}() : $helper.fqn($ctx, $class) {
+val tempElem = ${helper.fqn($ctx, $class.getEPackage())}.impl.${class.getName()}Impl()
     #if($ctx.persistence)
 initObject(tempElem)
     #end
@@ -38,8 +36,6 @@ override fun create(metaClassName : String) : ${ctx.kevoreeContainer}? {
 when(metaClassName){
 #foreach( $class in $classes )
     ${helper.fqn($ctx,$ctx.getBasePackageForUtilitiesGeneration())}.util.Constants.${helper.fqn($ctx,$class).replace(".","_")} -> { return create${class.getName()}() }
-    ${helper.fqn($ctx,$ctx.getBasePackageForUtilitiesGeneration())}.util.Constants.CN_$class.getName() -> { return create${class.getName()}() }
-
 #end            else -> {return null;}
 }
 }
