--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/VisitMethods.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/VisitMethods.vm
@@ -15,16 +15,16 @@ override fun visit(visitor : org.kevoree.modeling.api.util.ModelVisitor, recursi
             if(containedReference){
                     #set($firstGeneratedCont = false)
                 #end
-                if(visitor.beginVisitRef(${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()}, ${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.${FQNHelper.fqn($ctx, $ref.getEReferenceType()).replace(".", "_")})){
+                if(visitor.beginVisitRef(${ctx.basePackageForUtilitiesGeneration}.util.Constants.Ref_${ref.getName()}, ${ctx.basePackageForUtilitiesGeneration}.util.Constants.${FQNHelper.fqn($ctx, $ref.getEReferenceType()).replace(".", "_")})){
                 #if($ref.isMany())
                     for(KMFLoopEntryKey in _${ref.getName()}.keySet()){
-                        internal_visit(visitor,_${ref.getName()}.get(KMFLoopEntryKey),recursive,containedReference,nonContainedReference,${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()})
+                        internal_visit(visitor,_${ref.getName()}.get(KMFLoopEntryKey),recursive,containedReference,nonContainedReference,${ctx.basePackageForUtilitiesGeneration}.util.Constants.Ref_${ref.getName()})
                     }
                 #else
-                    internal_visit(visitor,${FQNHelper.protectReservedWords(${ref.getName()})},recursive,containedReference,nonContainedReference,${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()})
+                    internal_visit(visitor,${FQNHelper.protectReservedWords(${ref.getName()})},recursive,containedReference,nonContainedReference,${ctx.basePackageForUtilitiesGeneration}.util.Constants.Ref_${ref.getName()})
                 #end
                 }
-                visitor.endVisitRef(${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()})
+                visitor.endVisitRef(${ctx.basePackageForUtilitiesGeneration}.util.Constants.Ref_${ref.getName()})
             #end
             #if(!$firstGeneratedCont)
             }
@@ -36,16 +36,16 @@ override fun visit(visitor : org.kevoree.modeling.api.util.ModelVisitor, recursi
            if(nonContainedReference){
                             #set($firstGeneratedRef = false)
                         #end
-                        if(visitor.beginVisitRef(${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()}, ${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.${FQNHelper.fqn($ctx, $ref.getEReferenceType()).replace(".", "_")})){
+                        if(visitor.beginVisitRef(${ctx.basePackageForUtilitiesGeneration}.util.Constants.Ref_${ref.getName()}, ${ctx.basePackageForUtilitiesGeneration}.util.Constants.${FQNHelper.fqn($ctx, $ref.getEReferenceType()).replace(".", "_")})){
                         #if($ref.isMany())
                             for(KMFLoopEntryKey in _${ref.getName()}.keySet()){
-                                internal_visit(visitor,_${ref.getName()}.get(KMFLoopEntryKey),recursive,containedReference,nonContainedReference,${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()})
+                                internal_visit(visitor,_${ref.getName()}.get(KMFLoopEntryKey),recursive,containedReference,nonContainedReference,${ctx.basePackageForUtilitiesGeneration}.util.Constants.Ref_${ref.getName()})
                             }
                         #else
-                            internal_visit(visitor,${FQNHelper.protectReservedWords(${ref.getName()})},recursive,containedReference,nonContainedReference,${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()})
+                            internal_visit(visitor,${FQNHelper.protectReservedWords(${ref.getName()})},recursive,containedReference,nonContainedReference,${ctx.basePackageForUtilitiesGeneration}.util.Constants.Ref_${ref.getName()})
                         #end
                         }
-                        visitor.endVisitRef(${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Ref_${ref.getName()})
+                        visitor.endVisitRef(${ctx.basePackageForUtilitiesGeneration}.util.Constants.Ref_${ref.getName()})
                     #end
                 #end
            #if(!$firstGeneratedRef)
@@ -61,7 +61,7 @@ override fun visitAttributes(visitor : org.kevoree.modeling.api.util.ModelAttrib
     checkLazyLoad()
     #end
     #foreach( $att in ${FQNHelper.noduplicate($currentClass.getEAllAttributes())})
-        visitor.visit(${FQNHelper.protectReservedWords($att.getName())},${FQNHelper.fqn($ctx, ${ctx.basePackageForUtilitiesGeneration})}.util.Constants.Att_${att.getName()},this)
+        visitor.visit(${FQNHelper.protectReservedWords($att.getName())},${ctx.basePackageForUtilitiesGeneration}.util.Constants.Att_${att.getName()},this)
     #end
 }
 #end
